argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-static-app
spec:
  selector:
    app: sample-static-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
