argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-static-app
spec:
  rules:
  - host: "sample-static-app.lab"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-static-app
            port:
              number: 80
